- refactored property getting and setting support, docs and binaries update